Fixed scale on sprite
git-svn-id: https://cixar.com/svns/tale@1077 bef290a0-58e6-0310-905f-ba19b0a2e6dd

--- a/art/sprite/build
+++ b/art/sprite/build
@@ -1,3 +1,7 @@
 
-cat @.svg | svg-filter `basename $1 .layers`.layers | rsvg - `basename $1 .layers`.png
+cat @.svg | svg-filter `basename $1 .layers`.layers > `basename $1 .layers`.svg
+
+rsvg `basename $1 .layers`.svg `basename $1 .layers`.png
+rsvg -w 100 `basename $1 .layers`.svg `basename $1 .layers`-100.png
+rsvg -w 400 `basename $1 .layers`.svg `basename $1 .layers`-400.png
 
