--- a/art/sprite/rules
+++ b/art/sprite/rules
@@ -1,258 +1,180 @@
 
+# mount body box
+
+mount_wings_right_bottom
+
+mount_wings_right_top
+rider_right_bottom
+
+rider_right_top
+saddle_right
+mount_arm_(elephant|wombat|bunny|chicken|mouse|plesiosaur|llama)_right
+mount_leg_(elephant|wombat|bunny|chicken|mouse|plesiosaur|llama)_right
+mount_tail_(bunny|rat|badger|curly|otter|llama)
+dinosaur_ventral_blades_back
 mount_body
-rodent_head_otter
-rodent_head_elephant
-rodent_head_bear
-rodent_head_mouse
-rodent_eyes_elephant
-rodent_eyes_beady
-rodent_eyes_wombat
-rodent_goggles
-rodent_horn_rhino
-rodent_unihorn
+mount_spots_cow
+mount_leg_(elephant|wombat|bunny)_left
+mount_spots_rump
+mount_leg_(chicken|mouse|plesiosaur|llama)_left
+mount_arm_(elephant|wombat|bunny|chicken|mouse|plesiosuar)_left
+mount_mane
+dinosaur_head_bottom
 
-# mount attributes
-rodent_head_bear
-rodent_snout
-rodent_head_mouse
-rodent_nostril
-rodent_eyes_elephant
+dinosaur_head_top
+mount_arm_llama_left
+mount_llama_fur
+saddle_left
+rider_left_bottom
 
-# mount ears
+rider_left_top
+saddle_front
+mount_wings_left_bottom
 
-dinosaur_bow_tie
-rodent_ear_.*_right
-rodent_head_otter
-rodent_head_elephant
-rodent_head_bear
-rodent_head_mouse
-rodent_goggles
-rodent_ear_.*_left
+mount_wings_left_top
+rodent_head_bottom
 
-rodent_ear_elephant_right
-rodent_ear_wolf_right
-rodent_ear_mouse_right
-rodent_ear_bunny_right
+rodent_head_top
 
-rodent_ear_bunny_left
-rodent_ear_mouse_left
-rodent_ear_wolf_left
-rodent_ear_elephant_left
-rodent_ear_poodle_left
 
-# antlers
+# rodent head box
 
-rodent_ear_mouse_right
+rodent_head_bottom
+rodent_teeth_buck rodent_fangs rodent_tusks_elephant rodent_tusk_mastadon_right
+rodent_ear_(elephant|mouse|wolf)_right
 rodent_antler_right
-rodent_ear_bunny_right
-
-rodent_ear_bunny_left
+rodent_ear_(bunny)_right
+rodent_head_(mouse|otter|bear|elephant)
+rodent_tusk_mastadon_left
+rodent_eyes_(beady|wombat|elephant)
+rodent_goggles
+rodent_ear_(bunny)_left
 rodent_antler_left
-rodent_ear_mouse_left
+rodent_ear_(elephant|mouse|poodle|wolf)_left
+rodent_(nostril|snout)
+rodent_unihorn
+rodent_horn_rhino
+rodent_head_top
 
-# dinosaur attributes
-mount_body
-dinosaur_teeth_buck
-dinosaur_fangs
+
+# dinosaur head box
+
+dinosaur_head_bottom
+dinosaur_teeth_(buck)
 dinosaur_ear_bunny_right
+dinosaur_ventral_blades_front
 dinosaur_head
-dinosaur_eyes_normal
-dinosaur_eyes_evil
-dinosaur_goggles
-dinosaur_horn
-dinosaur_ear_bunny_left
 dinosaur_collar
 dinosaur_bow_tie
-rodent_head_elephant
+dinosaur_eyes_(normal|evil)
+dinosaur_goggles
+dinosaur_ear_bunny_left
+mount_llama_wig
+dinosaur_unihorn
+dinosaur_head_top
 
-# teeth
-mount_body
-rodent_teeth_buck
-rodent_fangs
-rodent_head_otter
-rodent_tusk_mastadon_right
-rodent_head_elephant
-rodent_head_bear
-rodent_tusks_elephant
-rodent_head_mouse
-rodent_tusk_mastadon_left
-rodent_ear_.*_left
+
+# rider right box
+
+rider_right_bottom
+rider_back_bottom
+
+rider_back_top
+rider_torso # TODO redistribute torso, left and right leg so that the layers can stack properly
+rider_fuzz
+rider_leg_right_bottom
+
+rider_leg_right_top
+rider_arm_right_bottom
+
+rider_arm_right_top
+rider_shirt_right
+rider_right_top
+
+
+# rider left box
+
+rider_left_bottom
+rider_(arm|leg)_left_bottom
+
+rider_(arm|leg)_left_top
+rider_breastplate
+rider_face_bottom
+
+rider_face_top
+rider_left_top
+
+
+# rider right arm box
+
+rider_arm_right_bottom
+rider_arm_right
+rider_arm_right_top
+
+
+# rider left arm box
+
+rider_arm_left_bottom
+rider_hand_left_buckler
+rider_hand_left
+rider_arm_left
+rider_hand_left_(sword|knife)
+rider_hand_left_thumb
+rider_shirt_left
+rider_arm_left_top
+
+
+# rider left leg box
+
+rider_arm_right_bottom
+rider_hand_right_buckler
+rider_hand_right
+rider_arm_right
+rider_hand_right_(sword|knife)
+rider_hand_right_thumb
+rider_shirt_right
+rider_arm_right_top
+
+
+# rider right leg box
+
+rider_leg_right_bottom
+rider_leg_right
+rider_shoe_right
+rider_pant_(large|small)_right
+rider_leg_right_top
+
+
+# rider face box
+
+rider_face_bottom
+rider_hair_long
+rider_ear_(elven|round)_(left|right)
+rider_face_round
+rider_eyes_(normal|aggressive|surprised)
+rider_eyes_pupils
+rider_hair_bangs
+rider_mouth_(smile|grimamce)
+rider_face_top
+
+
+# rider back box
+
+rider_back_bottom
+rider_shoulder_left_buckler
+rider_shoulder_right_buckler
+rider_shoulder_left_sword
+rider_shoulder_right_sword
+rider_back_top
+
 
 # wings
 
-mount_wing_.*_right
-mount_tail.*
+mount_wings_right_bottom
+mount_wing_(bat|bird|hummingbird)_right
+mount_wings_right_top
 
-rodent_ear_bunny_left
-mount_wing_.*_left
-rodent_ear_bunny_right
-
-# tails
-mount_tail_.*
-mount_body
-
-# legs and arms
-
-mount_leg_chicken_right
-mount_leg_bunny_right
-mount_leg_elephant_right
-mount_leg_mouse_right
-mount_leg_wombat_right
-
-mount_arm_chicken_right
-mount_arm_bunny_right
-mount_arm_elephant_right
-mount_arm_mouse_right
-mount_arm_wombat_right
-
-mount_leg_.*_right mount_arm_.*_right
-mount_body
-mount_leg_.*_left mount_arm_.*_left
-rodent_head_.*
-
-mount_arm_(chicken|bunny|elephant|mouse|wombat)_left
-dinosaur_head
-mount_arm_llama_left
-
-mount_leg_mouse_left
-mount_arm_mouse_left
-mount_leg_wombat_left
-mount_arm_wombat_left
-mount_leg_bunny_left
-mount_arm_bunny_left
-mount_leg_elephant_left
-mount_arm_elephant_left
-mount_leg_chicken_left
-mount_arm_chicken_left
-
-# spots
-mount_body
-mount_spots_cow
-mount_leg_elephant_left mount_arm.*
-mount_spots_rump
-mount_leg_chicken_left
-
-# the mane must be between the body
-#  and the head
-mount_spots_cow
-mount_mane
-rodent_head_.* dinosaur_head
-
-# ventral blades
-
-mount_tail_badger mount_tail_rat mount_tail_curly dinosaur_ventral_blades_back
-mount_tail_bunny
-mount_body
-
-dinosaur_ear_bunny_right
-dinosaur_ventral_blades_front
-dinosaur_ear_bunny_left
-
-dinosaur_head
-dinosaur_eyes.*
-dinosaur_goggles
-mount_llama_wig
-dinosaur_unihorn
-dinosaur_unihorn
-
-# rider
-
-rider_arm_right
-rider_torso
-rider_arm_left
-rider_fuzz
-rider_hair_long
-rider_hair_short
-rider_ear_.*_right
-rider_face_long
-rider_ear_.*_left
-rider_face_round
-rider_mouth.*
-rider_hair_bangs
-
-# eyes
-rider_face_long rider_face_round
-rider_eyes_aggressive
-rider_eyes_normal
-rider_eyes_surprised
-rider_eyes_pupils
-rider_hair_bangs
-
-# legs pants shoes
-rider_torso
-rider_leg_right
-rider_leg_left
-
-rider_leg_right
-rider_shoe_right
-rider_pant_small_right
-
-rider_leg_left
-rider_shoe_left
-rider_pant_small_left
-
-# shirt breastplate
-rider_torso rider_arm.* rider_leg.* rider_pant_small.* rider_fuzz
-rider_shirt
-rider_breastplate
-rider_face_long rider_face_round
-
-# hands
-
-rider_hand_left
-rider_arm_left
-rider_hand_left_thumb
-
-rider_hand_right
-rider_arm_right
-rider_hand_right_thumb
-
-# equipment
-
-rider_hand_left_buckler
-rider_hand_left rider_arm_left rider_shirt
-rider_hand_left_sword
-rider_hand_left_knife
-rider_hand_left_thumb
-
-rider_hand_right_buckler
-rider_hand_right rider_arm_left rider_shirt
-rider_hand_right_sword
-rider_hand_right_knife
-rider_hand_right_thumb
-
-rider_shoulder_left_buckler
-rider_shoulder_left_sword
-rider_shoulder_right_buckler
-rider_shoulder_right_sword
-rider_torso rider_hair.*
-
-
-# critical points between rider and mount
-
-rider_pant_small_right
-dinosaur_ventral_blades_back
-saddle_right
-mount_body
-
-mount_leg_.*_left
-saddle_left
-rider_leg_left
-
-dinsaur_bow_tie
-saddle_front
-mount_wing_.*_left
-
-rider_shoe_left
-mount_mane
-
-rider_hand_right_thumb
-dinosaur_ear_bunny_right
-
-rider_breastplate
-rodent_ear_bunny_right
-
-dinosaur_head
-mount_llama_fur
-saddle_front saddle_left
+mount_wings_left_bottom
+mount_wing_(bat|bird|hummingbird)_left
+mount_wings_left_top
 
