--- a/art/sprite/rules
+++ b/art/sprite/rules
@@ -23,6 +23,7 @@ dinosaur_head_bottom
 
 dinosaur_head_top
 mount_arm_llama_left
+rodent_shell_turtle
 mount_llama_fur
 saddle_left
 rider_left_bottom
