Added sound, rotation, and vertical centering.
git-svn-id: https://cixar.com/svns/tale@1175 bef290a0-58e6-0310-905f-ba19b0a2e6dd

--- a/bin/lighttpd.conf
+++ b/bin/lighttpd.conf
@@ -1,11 +1,11 @@
 #!/usr/sbin/lighttpd -f
 
-server.document-root = "/home/kris.kowal/tale/client"
+server.document-root = "/tale/client"
 
-server.port = 8080
+server.port = 80
 
-server.username = "www"
-server.groupname = "www"
+server.username = "www-data"
+server.groupname = "www-data"
 
 mimetype.assign = (
   ".html" => "text/html", 
@@ -18,17 +18,22 @@ index-file.names = ("index.html")
 
 server.modules = (
     "mod_proxy",
-    "mod_setenv"
+    "mod_setenv",
+    "mod_rewrite"
 )
 
 proxy.server = (
     "/session" => (
         "" => (
-            "host" => "131.215.159.52",
+            "host" => "38.102.243.51",
             "port" => 2380
         )
     )
 )
 
 setenv.add-response-header = ( "Cache-Control" => "public, max-age=0" )
+
+url.rewrite-once = (
+    "^/play$" => "/play.html"
+)
 
