Changed uses of JsonWriter and JsonReader to JsonResponse and JsonRequest.
git-svn-id: https://cixar.com/svns/tale@1199 bef290a0-58e6-0310-905f-ba19b0a2e6dd

--- a/bin/lighttpd.conf
+++ b/bin/lighttpd.conf
@@ -19,7 +19,8 @@ index-file.names = ("index.html")
 server.modules = (
     "mod_proxy",
     "mod_setenv",
-    "mod_rewrite"
+    "mod_rewrite",
+    "mod_alias"
 )
 
 proxy.server = (
@@ -31,9 +32,14 @@ proxy.server = (
     )
 )
 
+alias.url = (
+    "/art" => "/tale/art",
+    "/music" => "/tale/music"
+)
+
 setenv.add-response-header = ( "Cache-Control" => "public, max-age=0" )
 
 url.rewrite-once = (
-    "^/play$" => "/play.html"
+    "^/play/?$" => "/play.html"
 )
 
