Refined the narrator and finished the code that enables full engine exports.
git-svn-id: https://cixar.com/svns/tale@1207 bef290a0-58e6-0310-905f-ba19b0a2e6dd

--- a/etc/lighttpd.conf
+++ b/etc/lighttpd.conf
@@ -28,13 +28,14 @@ server.errorlog = "/tale/var/log/lighttpd/error.log"
 
 alias.url = (
     "/art" => "/tale/art",
-    "/music" => "/tale/music"
+    "/music" => "/tale/music/pasillas",
+    "/sound" => "/tale/sound"
 )
 
 proxy.server = (
     "/session" => (
         "" => (
-            "host" => "38.102.243.51",
+            "host" => "127.0.0.1",
             "port" => 2380
         )
     )
