--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     },
     "dependencies": {
         "jaque": "0.0.0",
-        "narwhal-lib": "0.4.0+",
-        "node-narwhal": "0.0.0+",
+        "narwhal-lib": "0.0.0",
+        "node-narwhal": "0.0.0",
         "node": "0.1.92"
     }
 }
